--- a/crawling/package.json
+++ b/crawling/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "selenium-webdriver": "^4.7.0"
+    "axios": "^1.2.1",
+    "cheerio": "^1.0.0-rc.12",
+    "selenium-webdriver": "^4.7.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
