--- a/crawling/package.json
+++ b/crawling/package.json
@@ -2,8 +2,12 @@
   "dependencies": {
     "axios": "^1.2.1",
     "cheerio": "^1.0.0-rc.12",
+    "mysql": "^2.18.1",
     "selenium-webdriver": "^4.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/mysql": "^2.15.21"
   }
 }
